@@ -1,5 +1,5 @@
 <div class="page-score-counter-wrapper">
-    <div class="fraction hidden">
+    <div class="fraction">
         <div class="score">
         </div>
         <div class="separator">
